Fix visitkort preview card images aligned to left-most corner

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/organization-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/organization-overview.css
@@ -104,6 +104,8 @@
     img {
       max-width: 90%;
       height: auto;
+      margin-left: 5%;
+      margin-right: 5%;
     }
   }
 
